# software_testing2

./: CMakeLists.txt  README.md  Untitled_document.docx  common.h  load.c  mcb.c  save.c  sonar-project.properties
.github/workflows/: build.yml  coveralls.yml  test-action.yml
src/text/: move_cursor.c  remove_last_line.c
tests/: mcb_tests.cc  misc_tests.cc  rt_tests.cc  save_tests.cc
text/: text.h
